# TradingSim

./: .gitignore  CMakeLists.txt  README.md
data/: sample_feed.csv
include/: Event.h  Order.h  Parser.h
src/: Event.cpp  Order.cpp  Parser.cpp  main.cpp
